syntax = "proto3";
package flipcash.common.v1;
option go_package = "github.com/code-payments/flipcash-protobuf-api/generated/go/common/v1;commonpb";
option java_package = "com.codeinc.flipcash.gen.common.v1";
option objc_class_prefix = "FPBCommonV1";
message PublicKey {
    bytes value = 1 ;
}
message Signature {
    bytes value = 1 ;
}
// Auth provides an authentication information for RPCs/messages.
//
// Currently, only a single form is supported, but it may be useful in
// the future to rely on session tokens instead.
message Auth {
    oneof kind {
        // KeyPair uses pub key cryptography to verify.
        KeyPair key_pair = 1;
    }
    // KeyPair uses a keypair to verify a message.
    //
    // The signature should be of the encapsulating proto message,
    // _without_ the Auth section being set.
    message KeyPair {
        PublicKey pub_key = 1;
        Signature signature = 2;
    }
}
message UserId {
    bytes value = 1 ;
}
// AppInstallId is a unque ID tied to a client app installation. It does not
// identify a device. Value should remain private and not be shared across
// installs.
message AppInstallId {
    string value = 1 ;
}
enum Platform {
    UNKNOWN = 0;
    APPLE   = 1;
    GOOGLE  = 2;
}
